Add your commit

--- a/docs/less/less_desktope/catalog_card.less
+++ b/docs/less/less_desktope/catalog_card.less
@@ -33,7 +33,7 @@
                 margin-right: 10px;
             }
             .img{
-                background-image: url(/docs/less/img/selected_img.PNG);
+                background-image: url(less/img/selected_img.PNG);
                 width: 10px;
                 height: 10px;
                 background-repeat: no-repeat;
@@ -151,7 +151,7 @@
             .img{
                 width: 20px;
                 height: 16px;
-                background-image: url(/docs/less/img/Union_card.PNG);
+                background-image: url(less/img/Union_card.PNG);
                 background-size: cover;
                 background-repeat: no-repeat;
             }
@@ -172,20 +172,20 @@
     }
 }
 .card1{
-    background-image: url(/docs/less/img/card1.PNG);
+    background-image: url(less/img/card1.PNG);
 }
 .card2{
-    background-image: url(/docs/less/img/card2.PNG);
+    background-image: url(less/img/card2.PNG);
 }
 .card3{
-    background-image: url(/docs/less/img/card3.PNG);
+    background-image: url(less/img/card3.PNG);
 }
 .card4{
-    background-image: url(/docs/less/img/card4.PNG);
+    background-image: url(less/img/card4.PNG);
 }
 .card5{
-    background-image: url(/docs/less/img/card5.PNG);
+    background-image: url(less/img/card5.PNG);
 }
 .card6{
-    background-image: url(/docs/less/img/card6.PNG);
+    background-image: url(less/img/card6.PNG);
 }
