Add your commit

--- a/docs/less/less_mobile/catalog_form.css
+++ b/docs/less/less_mobile/catalog_form.css
@@ -48,6 +48,8 @@
   align-items: center;
 }
 .button_catalog input {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
   width: 160px;
   height: 45px;
   background: #7859CF;
@@ -63,6 +65,8 @@
   background-color: #593CAC;
 }
 .button_catalog .reset {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
   width: 160px;
   height: 45px;
   background: white;
