--- a/docs/less/less_mobile/catalog_form.less
+++ b/docs/less/less_mobile/catalog_form.less
@@ -52,6 +52,8 @@
     flex-direction: column;
     align-items: center;
     input{
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         width: 160px;
         height: 45px;
         background: #7859CF;
@@ -67,6 +69,8 @@
         background-color: #593CAC;
     }
     .reset{
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         width: 160px;
         height: 45px;
         background: white;
