--- a/docs/less/less_tablet/catalog_form.less
+++ b/docs/less/less_tablet/catalog_form.less
@@ -72,6 +72,8 @@
     width: 100%;
     margin-top: 40px;
     input{
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         width: 160px;
         height: 45px;
         background: #7859CF;
@@ -89,6 +91,8 @@
         background-color: #593CAC;
     }
     .reset{
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         width: 160px;
         height: 45px;
         background: white;
