--- a/docs/less/less_desktope/catalog_form.css
+++ b/docs/less/less_desktope/catalog_form.css
@@ -68,6 +68,8 @@
   margin-top: 40px;
 }
 .button_catalog input {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
   width: 160px;
   height: 45px;
   background: #7859CF;
@@ -84,6 +86,8 @@
   background-color: #593CAC;
 }
 .button_catalog .reset {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
   width: 160px;
   height: 45px;
   background: white;
