--- a/docs/less/less_desktope/catalog_form.less
+++ b/docs/less/less_desktope/catalog_form.less
@@ -70,6 +70,8 @@
     width: 100%;
     margin-top: 40px;
     input{
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         width: 160px;
         height: 45px;
         background: #7859CF;
@@ -86,6 +88,8 @@
         background-color: #593CAC;
     }
     .reset{
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         width: 160px;
         height: 45px;
         background: white;
