--- a/docs/less/less_desktope/slider.less
+++ b/docs/less/less_desktope/slider.less
@@ -8,7 +8,7 @@
     
     .slider_img{
         order: 0;
-        background-image: url("/docs/less/img/slider_img_tablet.png");
+        background-image: url("less/img/slider_img_tablet.png");
         background-size: cover;
         background-repeat: no-repeat;
         width: 600px;
@@ -16,10 +16,10 @@
         margin: 20px 30px 60px 20px;
     }
     .slider_img2{
-        background-image: url(/docs/less/img/slider_img2.png);  
+        background-image: url(less/img/slider_img2.png);  
     }
     .slider_img3{
-        background-image: url(/docs/less/img/slider_img3.png);  
+        background-image: url(less/img/slider_img3.png);  
     }
     .slider_conteiner{
         display: flex;
