--- a/docs/less/less_mobile/catalog_card.less
+++ b/docs/less/less_mobile/catalog_card.less
@@ -32,7 +32,7 @@
                 margin-right: 10px;
             }
             .img{
-                background-image: url(/docs/less/img/selected_img.png);
+                background-image: url(less/img/selected_img.png);
                 width: 10px;
                 height: 10px;
                 background-repeat: no-repeat;
@@ -148,7 +148,7 @@
             .img{
                 width: 20px;
                 height: 16px;
-                background-image: url(./docs/less/img/Union_card.png);
+                background-image: url(less/img/Union_card.png);
                 background-size: cover;
                 background-repeat: no-repeat;
             }
@@ -168,20 +168,20 @@
     }
 }
 .card1{
-    background-image: url("/docs/less/img/card1.png");
+    background-image: url("less/img/card1.png");
 }
 .card2{
-    background-image: url("/docs/less/img/card2.png");
+    background-image: url("less/img/card2.png");
 }
 .card3{
-    background-image: url(/docs/less/img/card3.png);
+    background-image: url(less/img/card3.png);
 }
 .card4{
-    background-image: url(/docs/less/img/card4.png);
+    background-image: url(less/img/card4.png);
 }
 .card5{
-    background-image: url(/docs/less/img/card5.png);
+    background-image: url(less/img/card5.png);
 }
 .card6{
-    background-image: url(/docs/less/img/card6.png);
+    background-image: url(less/img/card6.png);
 }
