--- a/docs/less/less_mobile/header.less
+++ b/docs/less/less_mobile/header.less
@@ -12,7 +12,7 @@
         margin-left: 20px;
         width: 32px;
         height: 36px;
-        background-image: url(/docs/less/img/header_logo.png);
+        background-image: url(less/img/header_logo.png);
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -66,14 +66,14 @@
             align-items: center;
             justify-content: center;
             .header_login{
-                background-image: url(/docs/less/img/header_login.png);
+                background-image: url(less/img/header_login.png);
                 width: 16px;
                 height: 16px;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
             .header_basket{
-                background-image: url(/docs/less/img/header_basket.png);
+                background-image: url(less/img/header_basket.png);
                 width: 16px;
                 height: 16px;
                 background-size: cover;
@@ -116,7 +116,7 @@
                 }
                 .closed_icon{
                     display: flex;
-                    background-image: url(/docs/less/img/close.png);
+                    background-image: url(less/img/close.png);
                     width: 16px;
                     height: 16px;
                     background-size: cover;
