--- a/docs/less/less_tablet/footer.less
+++ b/docs/less/less_tablet/footer.less
@@ -15,7 +15,7 @@
         border-bottom: none;
 
         .logo_footer_img{
-            background-image: url(/docs/less/img/footer_logo_tablet.png);
+            background-image: url(less/img/footer_logo_tablet.png);
             background-size: cover;
             background-repeat: no-repeat;
             width: 170px;
@@ -27,7 +27,7 @@
             align-items: center;
             justify-content: space-between;
             .icon1_img{
-                background-image: url(/docs/less/img/icon\ footer1.png);
+                background-image: url(less/img/icon\ footer1.png);
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -35,7 +35,7 @@
             }
             a:hover{
                 .icon1_img{
-                background-image: url("/docs/less/img/icon\ footer1_hover.png");
+                background-image: url("less/img/icon\ footer1_hover.png");
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -43,7 +43,7 @@
                 }
             }
             .icon2_img{
-                background-image: url(/docs/less/img/icon\ footer2.png);
+                background-image: url(less/img/icon\ footer2.png);
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -51,7 +51,7 @@
             }
             a:hover{
                 .icon2_img{
-                background-image: url("/docs/less/img/icon\ footer2_hover.png");
+                background-image: url("less/img/icon\ footer2_hover.png");
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -59,7 +59,7 @@
                 }
             }
             .icon3_img{
-                background-image: url(/docs/less/img/icon\ footer3.png);
+                background-image: url(less/img/icon\ footer3.png);
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -67,7 +67,7 @@
             }
             a:hover{
                 .icon3_img{
-                background-image: url("/docs/less/img/icon\ footer3_hover.png");
+                background-image: url("less/img/icon\ footer3_hover.png");
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -123,7 +123,7 @@
             display: flex;
             width: 100%;
             .img{
-                background-image: url(/docs/less/img/location.png);
+                background-image: url(less/img/location.png);
                 width: 13px;
                 height: 16px;
                 background-size: cover;
@@ -145,7 +145,7 @@
             width: 100%;
             margin-top: 15px;
             .img{
-                background-image: url(/docs/less/img/Phone.png);
+                background-image: url(less/img/Phone.png);
                 width: 13px;
                 height: 16px;
                 background-size: cover;
@@ -174,7 +174,7 @@
             color: #BDBDBD;
          }
          .logo_html_academy{
-            background-image: url("/docs/less/img/logo_htmlAcademy.png");
+            background-image: url("less/img/logo_htmlAcademy.png");
             background-size: cover;
             background-repeat: no-repeat;
             width: 12px;
@@ -187,7 +187,7 @@
             color: #9070EC;
         }
         .logo_html_academy{
-            background-image: url("/docs/less/img/logo_htmlAcademy_hover.png");
+            background-image: url("less/img/logo_htmlAcademy_hover.png");
         }
     }
     .developted_by:active{
@@ -195,7 +195,7 @@
             color: #593CAC;
         }
         .logo_html_academy{
-            background-image: url("/docs/less/img/logo_htmlAcademy_active.png");
+            background-image: url("less/img/logo_htmlAcademy_active.png");
         }
     }
     
