--- a/docs/less/less_tablet/pagination.less
+++ b/docs/less/less_tablet/pagination.less
@@ -64,14 +64,14 @@
         display: none;
     }
     .arrow_left{
-        background-image: url(/docs/less/img/arrow_left.png);
+        background-image: url(less/img/arrow_left.png);
         background-size: cover;
         background-repeat: no-repeat;
         width: 6px;
         height: 10px;
     }
     .arrow_right{
-        background-image: url(/docs/less/img/arrow_right.png);
+        background-image: url(less/img/arrow_right.png);
         background-size: cover;
         background-repeat: no-repeat;
         width: 6px;
@@ -82,10 +82,10 @@
     background-color: #9070EC;
     color: white;
     .arrow_left{
-        background-image: url(/docs/less/img/arrow_left_white.png);
+        background-image: url(less/img/arrow_left_white.png);
     }
     .arrow_right{
-        background-image: url(/docs/less/img/arrow_right_white.png);
+        background-image: url(less/img/arrow_right_white.png);
     }
 }
 .item_pagination:active{
