--- a/docs/less/less_desktope/header.css
+++ b/docs/less/less_desktope/header.css
@@ -27,7 +27,7 @@
   margin-left: 20px;
   width: 170px;
   height: 36px;
-  background-image: url("/docs/less/img/footer_logo_tablet.png");
+  background-image: url("less/img/footer_logo_tablet.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -109,14 +109,14 @@
   justify-content: center;
 }
 .header .header_button .conteiner_button_header .header_login {
-  background-image: url("/docs/less/img/header_login.png");
+  background-image: url("less/img/header_login.png");
   width: 16px;
   height: 16px;
   background-size: cover;
   background-repeat: no-repeat;
 }
 .header .header_button .conteiner_button_header .header_basket {
-  background-image: url("/docs/less/img/header_basket.png");
+  background-image: url("less/img/header_basket.png");
   width: 16px;
   height: 16px;
   background-size: cover;
@@ -171,7 +171,7 @@
 }
 .header .header_button .header_popup .button_popup .closed_icon {
   display: flex;
-  background-image: url("/docs/less/img/close.png");
+  background-image: url("less/img/close.png");
   width: 16px;
   height: 16px;
   background-size: cover;
