--- a/docs/less/less_desktope/header.less
+++ b/docs/less/less_desktope/header.less
@@ -27,7 +27,7 @@
         margin-left: 20px;
         width: 170px;
         height: 36px;
-        background-image: url("/docs/less/img/footer_logo_tablet.png");
+        background-image: url("less/img/footer_logo_tablet.png");
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -109,14 +109,14 @@
             align-items: center;
             justify-content: center;
             .header_login{
-                background-image: url("/docs/less/img/header_login.png");
+                background-image: url("less/img/header_login.png");
                 width: 16px;
                 height: 16px;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
             .header_basket{
-                background-image: url("/docs/less/img/header_basket.png");
+                background-image: url("less/img/header_basket.png");
                 width: 16px;
                 height: 16px;
                 background-size: cover;
@@ -172,7 +172,7 @@
                 }
                 .closed_icon{
                     display: flex;
-                    background-image: url("/docs/less/img/close.png");
+                    background-image: url("less/img/close.png");
                     width: 16px;
                     height: 16px;
                     background-size: cover;
