--- a/docs/less/less_desktope/pagination.css
+++ b/docs/less/less_desktope/pagination.css
@@ -62,14 +62,14 @@
   display: none;
 }
 .pagination_list .arrow_left {
-  background-image: url(/docs/less/img/arrow_left.png);
+  background-image: url(less/img/arrow_left.png);
   background-size: cover;
   background-repeat: no-repeat;
   width: 6px;
   height: 10px;
 }
 .pagination_list .arrow_right {
-  background-image: url(/docs/less/img/arrow_right.png);
+  background-image: url(less/img/arrow_right.png);
   background-size: cover;
   background-repeat: no-repeat;
   width: 6px;
@@ -80,10 +80,10 @@
   color: white;
 }
 .item_pagination:hover .arrow_left {
-  background-image: url(/docs/less/img/arrow_left_white.png);
+  background-image: url(less/img/arrow_left_white.png);
 }
 .item_pagination:hover .arrow_right {
-  background-image: url(/docs/less/img/arrow_right_white.png);
+  background-image: url(less/img/arrow_right_white.png);
 }
 .item_pagination:active {
   background-color: #593CAC;
