--- a/docs/less/less_mobile/features.less
+++ b/docs/less/less_mobile/features.less
@@ -40,17 +40,17 @@
             padding-bottom: 10px;
         }
         .icon1{
-            background-image: url(/docs/less/img/icon_1.png);
+            background-image: url(less/img/icon_1.png);
         }
         .icon2{
-            background-image: url(/docs/less/img/icon_2.png);
+            background-image: url(less/img/icon_2.png);
         }
         .icon3{
-            background-image: url(/docs/less/img/icon_3.png);
+            background-image: url(less/img/icon_3.png);
             height: 66px;
         }
         .icon4{
-            background-image: url(/docs/less/img/icon_4.png);
+            background-image: url(less/img/icon_4.png);
         }
         .title{
             font-style: normal;
