--- a/docs/less/less_mobile/footer.less
+++ b/docs/less/less_mobile/footer.less
@@ -17,7 +17,7 @@
             }
         }
         .logo_footer_img{
-            background-image: url(/docs/less/img/footer_logo.png);
+            background-image: url(less/img/footer_logo.png);
             background-size: cover;
             background-repeat: no-repeat;
             width: 82px;
@@ -29,7 +29,7 @@
             align-items: center;
             justify-content: space-between;
             .icon1_img{
-                background-image: url(/docs/less/img/icon\ footer1.png);
+                background-image: url(less/img/icon\ footer1.png);
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -37,7 +37,7 @@
             }
             a:hover{
                 .icon1_img{
-                background-image: url("/docs/less/img/icon\ footer1_hover.png");
+                background-image: url("less/img/icon\ footer1_hover.png");
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -45,7 +45,7 @@
                 }
             }
             .icon2_img{
-                background-image: url(/docs/less/img/icon\ footer2.png);
+                background-image: url(less/img/icon\ footer2.png);
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -53,7 +53,7 @@
             }
             a:hover{
                 .icon2_img{
-                background-image: url("/docs/less/img/icon\ footer2_hover.png");
+                background-image: url("less/img/icon\ footer2_hover.png");
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -61,7 +61,7 @@
                 }
             }
             .icon3_img{
-                background-image: url(/docs/less/img/icon\ footer3.png);
+                background-image: url(less/img/icon\ footer3.png);
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -69,7 +69,7 @@
             }
             a:hover{
                 .icon3_img{
-                background-image: url("/docs/less/img/icon\ footer3_hover.png");
+                background-image: url("less/img/icon\ footer3_hover.png");
                 background-size: cover;
                 background-repeat: no-repeat;
                 width: 40px;
@@ -118,7 +118,7 @@
             display: flex;
             width: 100%;
             .img{
-                background-image: url(/docs/less/img/location.png);
+                background-image: url(less/img/location.png);
                 width: 13px;
                 height: 16px;
                 background-size: cover;
@@ -140,7 +140,7 @@
             width: 100%;
             margin-top: 15px;
             .img{
-                background-image: url(/docs/less/img/Phone.png);
+                background-image: url(less/img/Phone.png);
                 width: 13px;
                 height: 16px;
                 background-size: cover;
@@ -169,7 +169,7 @@
             color: #BDBDBD;
          }
          .logo_html_academy{
-            background-image: url("/docs/less/img/logo_htmlAcademy.png");
+            background-image: url("less/img/logo_htmlAcademy.png");
             background-size: cover;
             background-repeat: no-repeat;
             width: 12px;
@@ -182,7 +182,7 @@
             color: #9070EC;
         }
         .logo_html_academy{
-            background-image: url("/docs/less/img/logo_htmlAcademy_hover.png");
+            background-image: url("less/img/logo_htmlAcademy_hover.png");
         }
     }
     .developted_by:active{
@@ -190,7 +190,7 @@
             color: #593CAC;
         }
         .logo_html_academy{
-            background-image: url("/docs/less/img/logo_htmlAcademy_active.png");
+            background-image: url("less/img/logo_htmlAcademy_active.png");
         }
     }
     
