--- a/docs/less/less_tablet/features.less
+++ b/docs/less/less_tablet/features.less
@@ -50,17 +50,17 @@
             margin-right: 20px;
         }
         .icon1{
-            background-image: url(/docs/less/img/icon_1.png);
+            background-image: url(less/img/icon_1.png);
         }
         .icon2{
-            background-image: url(/docs/less/img/icon_2.png);
+            background-image: url(less/img/icon_2.png);
         }
         .icon3{
-            background-image: url(/docs/less/img/icon_3.png);
+            background-image: url(less/img/icon_3.png);
             height: 66px;
         }
         .icon4{
-            background-image: url(/docs/less/img/icon_4.png);
+            background-image: url(less/img/icon_4.png);
         }
         .title{
             font-style: normal;
