--- a/docs/less/less_tablet/footer.css
+++ b/docs/less/less_tablet/footer.css
@@ -16,7 +16,7 @@
   border-bottom: none;
 }
 .footer .logo_footer .logo_footer_img {
-  background-image: url(/docs/less/img/footer_logo_tablet.png);
+  background-image: url(less/img/footer_logo_tablet.png);
   background-size: cover;
   background-repeat: no-repeat;
   width: 170px;
@@ -29,42 +29,42 @@
   justify-content: space-between;
 }
 .footer .logo_footer .icon_block .icon1_img {
-  background-image: url(/docs/less/img/icon\ footer1.png);
+  background-image: url(less/img/icon\ footer1.png);
   background-size: cover;
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
 }
 .footer .logo_footer .icon_block a:hover .icon1_img {
-  background-image: url("/docs/less/img/icon\ footer1_hover.png");
+  background-image: url("less/img/icon\ footer1_hover.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
 }
 .footer .logo_footer .icon_block .icon2_img {
-  background-image: url(/docs/less/img/icon\ footer2.png);
+  background-image: url(less/img/icon\ footer2.png);
   background-size: cover;
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
 }
 .footer .logo_footer .icon_block a:hover .icon2_img {
-  background-image: url("/docs/less/img/icon\ footer2_hover.png");
+  background-image: url("less/img/icon\ footer2_hover.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
 }
 .footer .logo_footer .icon_block .icon3_img {
-  background-image: url(/docs/less/img/icon\ footer3.png);
+  background-image: url(less/img/icon\ footer3.png);
   background-size: cover;
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
 }
 .footer .logo_footer .icon_block a:hover .icon3_img {
-  background-image: url("/docs/less/img/icon\ footer3_hover.png");
+  background-image: url("less/img/icon\ footer3_hover.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: 40px;
@@ -119,7 +119,7 @@
   width: 100%;
 }
 .footer .contact .location .img {
-  background-image: url(/docs/less/img/location.png);
+  background-image: url(less/img/location.png);
   width: 13px;
   height: 16px;
   background-size: cover;
@@ -141,7 +141,7 @@
   margin-top: 15px;
 }
 .footer .contact .phone .img {
-  background-image: url(/docs/less/img/Phone.png);
+  background-image: url(less/img/Phone.png);
   width: 13px;
   height: 16px;
   background-size: cover;
@@ -168,7 +168,7 @@
   color: #BDBDBD;
 }
 .footer .developted_by .logo_html_academy {
-  background-image: url("/docs/less/img/logo_htmlAcademy.png");
+  background-image: url("less/img/logo_htmlAcademy.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: 12px;
@@ -179,11 +179,11 @@
   color: #9070EC;
 }
 .footer .developted_by:hover .logo_html_academy {
-  background-image: url("/docs/less/img/logo_htmlAcademy_hover.png");
+  background-image: url("less/img/logo_htmlAcademy_hover.png");
 }
 .footer .developted_by:active a {
   color: #593CAC;
 }
 .footer .developted_by:active .logo_html_academy {
-  background-image: url("/docs/less/img/logo_htmlAcademy_active.png");
+  background-image: url("less/img/logo_htmlAcademy_active.png");
 }
