--- a/docs/less/less_tablet/header.less
+++ b/docs/less/less_tablet/header.less
@@ -9,7 +9,7 @@
         margin-left: 20px;
         width: 82px;
         height: 36px;
-        background-image: url("/docs/less/img/logo_tablet.png");
+        background-image: url("less/img/logo_tablet.png");
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -88,14 +88,14 @@
             align-items: center;
             justify-content: center;
             .header_login{
-                background-image: url(/docs/less/img/header_login.png);
+                background-image: url(less/img/header_login.png);
                 width: 16px;
                 height: 16px;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
             .header_basket{
-                background-image: url(/docs/less/img/header_basket.png);
+                background-image: url(less/img/header_basket.png);
                 width: 16px;
                 height: 16px;
                 background-size: cover;
@@ -133,7 +133,7 @@
                 }
                 .closed_icon{
                     display: flex;
-                    background-image: url(/docs/less/img/close.png);
+                    background-image: url(less/img/close.png);
                     width: 16px;
                     height: 16px;
                     background-size: cover;
