--- a/docs/main.css
+++ b/docs/main.css
@@ -240,7 +240,7 @@ body {
     align-items: center;
   }
   .slider .slider_img {
-    background-image: url(img/slider_img.png);
+    background-image: url(less/img/slider_img.png);
     background-size: cover;
     background-repeat: no-repeat;
     width: 280px;
@@ -248,10 +248,10 @@ body {
     margin: 20px 20px 10px 20px;
   }
   .slider .slider_img2 {
-    background-image: url(img/slider_img2.png);
+    background-image: url(less/img/slider_img2.png);
   }
   .slider .slider_img3 {
-    background-image: url(img/slider_img3.png);
+    background-image: url(less/img/slider_img3.png);
   }
   .slider .slider_conteiner {
     display: flex;
