--- a/docs/less/less_desktope/slider.less
+++ b/docs/less/less_desktope/slider.less
@@ -148,3 +148,6 @@
         height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,4px));
     }
 }
+.swiper-button-next, .swiper-button-prev{
+    top: 13%;
+}
