--- a/docs/less/less_mobile/header.css
+++ b/docs/less/less_mobile/header.css
@@ -1,10 +1,14 @@
 .header {
+  position: fixed;
+  z-index: 12;
   width: 100%;
   height: 60px;
   background-color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #F0EBFF;
+  box-shadow: 0px 0.5px 5px #F0EBFF;
 }
 .header .logo_block .name_logo {
   display: none;
