--- a/docs/less/less_mobile/slider.css
+++ b/docs/less/less_mobile/slider.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 60px;
+  position: relative;
 }
 .slider .slider_img {
   background-image: url(less/img/slider_img.png);
@@ -131,4 +133,8 @@
   border-radius: 0px;
   width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 62px));
   height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 4px));
+}
+.swiper-button-next,
+.swiper-button-prev {
+  top: 6%;
 }
