--- a/docs/less/less_mobile/slider.less
+++ b/docs/less/less_mobile/slider.less
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 60px;
+    position: relative;
     
     .slider_img{
         background-image: url(less/img/slider_img.png);
@@ -138,4 +140,8 @@
         width: var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,62px));
         height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,4px));
     }
+    
+}
+.swiper-button-next, .swiper-button-prev{
+    top: 6%;
 }
