--- a/docs/less/less_tablet/slider.less
+++ b/docs/less/less_tablet/slider.less
@@ -143,3 +143,6 @@
         height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,4px));
     }
 }
+.swiper-button-next, .swiper-button-prev{
+    top: 10%;
+}
