--- a/docs/main.css
+++ b/docs/main.css
@@ -7,6 +7,7 @@ body {
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
   font-family: "Montserrat";
+  position: relative;
 }
 /* montserrat-100 - latin_cyrillic */
 @font-face {
@@ -100,12 +101,16 @@ body {
 }
 @media (min-width: 320px) {
   .header {
+    position: fixed;
+    z-index: 12;
     width: 100%;
     height: 60px;
     background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #F0EBFF;
+    box-shadow: 0px 0.5px 5px #F0EBFF;
   }
   .header .logo_block .name_logo {
     display: none;
@@ -238,6 +243,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 60px;
+    position: relative;
   }
   .slider .slider_img {
     background-image: url(less/img/slider_img.png);
@@ -365,6 +372,10 @@ body {
     border-radius: 0px;
     width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 62px));
     height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 4px));
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    top: 6%;
   }
   .features {
     display: flex;
@@ -1481,6 +1492,10 @@ body {
     border-radius: 0px;
     width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 62px));
     height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 4px));
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    top: 10%;
   }
   .features {
     display: flex;
@@ -2728,6 +2743,10 @@ body {
     border-radius: 0px;
     width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 62px));
     height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 4px));
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    top: 13%;
   }
   .features {
     display: flex;
