--- a/docs/main.less
+++ b/docs/main.less
@@ -7,6 +7,7 @@ body{
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
     font-family: "Montserrat";
+    position: relative;
 }
 
 /* montserrat-100 - latin_cyrillic */
