--- a/docs/main.css
+++ b/docs/main.css
@@ -9,6 +9,13 @@ body {
   font-family: "Montserrat";
   position: relative;
 }
+* {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 /* montserrat-100 - latin_cyrillic */
 @font-face {
   font-family: 'Montserrat';
