--- a/docs/main.less
+++ b/docs/main.less
@@ -10,6 +10,14 @@ body{
     position: relative;
 }
 
+* {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 /* montserrat-100 - latin_cyrillic */
 @font-face {
     font-family: 'Montserrat';
