--- a/docs/main.less
+++ b/docs/main.less
@@ -140,7 +140,7 @@ body{
 @import url("./less/less_tablet/all_tablet.less") (min-width: 768px);
 @import url("./less/less_desktope/all_desktope.less") (min-width: 1440px);
 
-*:not(button, input, .header_logo, .logo_footer_img){
+*:not(button, input, .header_logo, .logo_footer_img, a){
   -webkit-transition:all 1500ms ease;
        -moz-transition:all 1500ms ease;
              -o-transition:all 1500ms ease;
