--- a/docs/less/less_desktope/header.css
+++ b/docs/less/less_desktope/header.css
@@ -51,8 +51,11 @@
   font-weight: 500;
   text-transform: uppercase;
 }
+.header .header_nav .nav_item:hover a {
+  transform: scale(1.1);
+}
 .header .header_nav .active_items {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.02em;
