--- a/docs/less/less_desktope/header.less
+++ b/docs/less/less_desktope/header.less
@@ -50,8 +50,13 @@
                 text-transform: uppercase;
             }
         }
+        .nav_item:hover{
+            a{
+                transform: scale(1.1);
+            }
+        }
         .active_items{
-            font-weight: 500;
+            font-weight: 600;
             font-size: 12px;
             line-height: 16px;
             letter-spacing: 0.02em;
