Add your commit

--- a/docs/less/less_mobile/catalog_form.less
+++ b/docs/less/less_mobile/catalog_form.less
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #F8F8F8;
+    padding-top: 70px;
     .text_mini{
         font-style: normal;
         font-weight: 700;
