--- a/docs/less/less_mobile/catalog_form.css
+++ b/docs/less/less_mobile/catalog_form.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #F8F8F8;
+  padding-top: 70px;
 }
 .title_block .text_mini {
   font-style: normal;
