--- a/docs/less/less_tablet/catalog_form.css
+++ b/docs/less/less_tablet/catalog_form.css
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
+  padding-top: 90px;
 }
 .title_block .text_mini {
   font-style: normal;
