--- a/docs/less/less_tablet/catalog_form.less
+++ b/docs/less/less_tablet/catalog_form.less
@@ -6,7 +6,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    padding-top: 90px;
     .text_mini{
         font-style: normal;
         font-weight: 700;
