--- a/docs/main.css
+++ b/docs/main.css
@@ -109,7 +109,7 @@ body {
 @media (min-width: 320px) {
   .header {
     position: fixed;
-    z-index: 12;
+    z-index: 1100;
     width: 100%;
     height: 60px;
     background-color: white;
@@ -388,7 +388,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 20px 60px 20px;
+    padding: 50px 20px 20px 20px;
     background-color: white;
   }
   .features .title {
@@ -466,6 +466,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #F8F8F8;
+    padding-top: 70px;
   }
   .title_block .text_mini {
     font-style: normal;
@@ -1601,7 +1603,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    padding-top: 90px;
   }
   .title_block .text_mini {
     font-style: normal;
@@ -2476,7 +2479,7 @@ body {
     transform: scale(1.1);
   }
   .header .header_nav .active_items {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.02em;
