--- a/docs/main.css
+++ b/docs/main.css
@@ -9,7 +9,7 @@ body {
   font-family: "Montserrat";
   position: relative;
 }
-* {
+*:not(input.field) {
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
