--- a/docs/main.less
+++ b/docs/main.less
@@ -10,7 +10,7 @@ body{
     position: relative;
 }
 
-* {
+*:not(input.field) {
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
