--- a/docs/main.less
+++ b/docs/main.less
@@ -10,12 +10,12 @@ body{
     position: relative;
 }
 
-*:not(input.field) {
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+input, textarea {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
 }
 
 /* montserrat-100 - latin_cyrillic */
