Add your commit

--- a/docs/less/less_mobile/slider.less
+++ b/docs/less/less_mobile/slider.less
@@ -145,3 +145,9 @@
 .swiper-button-next, .swiper-button-prev{
     top: 6%;
 }
+.swiper-button-next{
+    right: 10px;
+}
+.swiper-button-prev{
+    left: 10px;
+}
