--- a/docs/less/less_tablet/slider.less
+++ b/docs/less/less_tablet/slider.less
@@ -146,3 +146,9 @@
 .swiper-button-next, .swiper-button-prev{
     top: 10%;
 }
+.swiper-button-next{
+    right: 20px;
+}
+.swiper-button-prev{
+    left: 20px;
+}
